--- a/static/package.json
+++ b/static/package.json
@@ -13,12 +13,14 @@
   },
   "dependencies": {
     "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
+    "@types/react-date-range": "^1.4.10",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "concurrently": "^9.1.2",
